--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@types/react-dom": "^19.0.1",
     "emp-wasm-backend": "^0.1.0",
     "events": "^3.3.0",
+    "goodreads-api-node": "^0.0.12",
+    "googleapis": "^144.0.0",
     "mpc-framework": "^0.1.1",
     "peerjs-js-binarypack": "^2.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
     "rtc-pair-socket": "^0.1.5",
+    "spotify-web-api-node": "^5.0.2",
     "summon-ts": "^0.2.1"
   },
   "devDependencies": {
